FIX | GUI - Fix input type range dark mode #91

--- a/src/assets/styles.less
+++ b/src/assets/styles.less
@@ -2386,7 +2386,7 @@ video {
   }
 
   input[type=range] {
-    background-color: #2d3436;
+    background-color: #FFF;
   }
 
   .multiplist {
